# mcpfuzz

./: .gitignore  Dockerfile  Dockerfile.scan  README.md  batch_scan.sh  docker-compose.yaml  pyproject.toml  scan_community.sh  scan_official.sh  scan_untrusted.sh
catalog/: servers.yaml
demo_servers/: secure_server.py  vulnerable_server.py
demo_servers/sandbox/: hello.txt
docs/: ADDING_PATTERNS.md  ARCHITECTURE.md
patterns/: command_injection.yaml  error_leakage.yaml  input_validation.yaml  path_traversal.yaml  prompt_injection.yaml  resource_exhaustion.yaml  sql_injection.yaml  ssrf.yaml
reports/: RESULTS.md
reports/batch/: mark3labs-fs-go_20260420_100640.json  mark3labs-fs-go_20260420_104537.json  mark3labs-fs-go_20260420_112627.json  mcp-alchemy_20260420_100640.json  mcp-alchemy_20260420_104537.json  mcp-alchemy_20260420_112627.json  mcp-pandoc_20260420_100640.json  mcp-pandoc_20260420_104537.json  mcp-pandoc_20260420_112627.json  office-word_20260420_100640.json  office-word_20260420_104537.json  office-word_20260420_112627.json  official-fetch-python_20260420_100640.json  official-fetch-python_20260420_104537.json  official-fetch-python_20260420_112627.json  official-git-python_20260420_100640.json  official-git-python_20260420_104537.json  official-git-python_20260420_112627.json  official-sequential-thinking_20260420_104537.json  official-sequential-thinking_20260420_112627.json  (+4 more)
src/mcpfuzz/: __init__.py  (+2 more)
tests/: conftest.py  test_connector_stdio.py  test_discovery.py  test_engine.py  test_malicious_server.py  test_patterns.py  test_reporter.py
(+13 files in other folders)
